Added file IO to SimulationConfig
Presets can now be loaded from and saved to .csv files
Replaced Set with SortedSet (implemented with TreeSet) in classes
WorldMap and AbstractWorldMap
Implemented Animal#compareTo()
Animals may now copulate when at least two are in the same cell (instead
of exactly two as up to this point)

--- a/oolab/app/bin/main/simconfig.fxml
+++ b/oolab/app/bin/main/simconfig.fxml
@@ -42,5 +42,7 @@
     <Label fx:id="numGenesFieldLabel" text="Number of gene fields" textAlignment="center"/>
     <TextField fx:id="numGenesField"/>
 
+    <Button fx:id="readButton" text="Read parameters from file" textAlignment="center"/>
+    <Button fx:id="writeButton" text="Write parameters to file" textAlignment="center"/>
     <Button fx:id="startButton" text="Start simulation!" textAlignment="center"/>
 </VBox>
