Fixed grid size and Animal draw hierarchy
Grids now have a variable size depending on BorderPane bounds.
Animals are now drawn according to strength.

--- a/oolab/app/src/main/resources/simulation.fxml
+++ b/oolab/app/src/main/resources/simulation.fxml
@@ -10,7 +10,8 @@
 <BorderPane xmlns="http://javafx.com/javafx"
             xmlns:fx="http://javafx.com/fxml"
             minHeight="550.0" minWidth="850.0"
-            fx:controller="agh.ics.oop.presenter.SimulationPresenter">
+            fx:controller="agh.ics.oop.presenter.SimulationPresenter"
+            fx:id="mainBorderPane">
     <center>
         <GridPane fx:id="mapGrid" gridLinesVisible="true" alignment="center"/>
     </center>
