--- a/oolab/app/src/main/resources/simconfig.fxml
+++ b/oolab/app/src/main/resources/simconfig.fxml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
 <?import javafx.scene.control.Button?>
+<?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.Label?>
 <?import javafx.scene.control.TextField?>
 <?import javafx.scene.layout.VBox?>
@@ -41,6 +42,8 @@
 
     <Label fx:id="numGenesFieldLabel" text="Number of gene fields" textAlignment="center"/>
     <TextField fx:id="numGenesField"/>
+
+    <CheckBox fx:id="statSaveBox" text="Save statistics to CSV" textAlignment="center"/>
 
     <Button fx:id="readButton" text="Read parameters from file" textAlignment="center"/>
     <Button fx:id="writeButton" text="Write parameters to file" textAlignment="center"/>
